DID/VC/VP trust triangle + users provisioning
